{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 46,
  "lineage": "0987121f-422b-4874-3501-bf4a7f66ab9b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "duploservices-az01-httpd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/backendAddressPools/duploservices-az01-httpd-be-pools",
                "ip_addresses": [
                  "10.217.1.4"
                ],
                "name": "duploservices-az01-httpd-be-pools"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/backendHttpSettingsCollection/duploservices-az01-httpd-http-10200-with-hc",
                "name": "duploservices-az01-httpd-http-10200-with-hc",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 10200,
                "probe_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/probes/duploservices-az01-httpd-http-10200",
                "probe_name": "duploservices-az01-httpd-http-10200",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/frontendIPConfigurations/duploservices-az01-httpd-fe-config-external",
                "name": "duploservices-az01-httpd-fe-config-external",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/publicIPAddresses/duploservices-az01-httpd",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/frontendPorts/duploservices-az01-httpd-80",
                "name": "duploservices-az01-httpd-80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/gatewayIPConfigurations/duploservices-duploservices-az01-ag-httpd-gateway",
                "name": "duploservices-duploservices-az01-ag-httpd-gateway",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/duploinfra-default-ag"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/frontendIPConfigurations/duploservices-az01-httpd-fe-config-external",
                "frontend_ip_configuration_name": "duploservices-az01-httpd-fe-config-external",
                "frontend_port_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/frontendPorts/duploservices-az01-httpd-80",
                "frontend_port_name": "duploservices-az01-httpd-80",
                "host_name": "",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/httpListeners/duploservices-az01-httpd-http-80-external",
                "name": "duploservices-az01-httpd-http-80-external",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourcegroups/duploservices-az01/providers/Microsoft.ManagedIdentity/userAssignedIdentities/duploservices-az01"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus",
            "name": "duploservices-az01-httpd",
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/probes/duploservices-az01-httpd-http-10200",
                "interval": 10,
                "match": [
                  {
                    "body": "",
                    "status_code": []
                  }
                ],
                "minimum_servers": 0,
                "name": "duploservices-az01-httpd-http-10200",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "protocol": "Http",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/backendAddressPools/duploservices-az01-httpd-be-pools",
                "backend_address_pool_name": "duploservices-az01-httpd-be-pools",
                "backend_http_settings_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/backendHttpSettingsCollection/duploservices-az01-httpd-http-10200-with-hc",
                "backend_http_settings_name": "duploservices-az01-httpd-http-10200-with-hc",
                "http_listener_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/httpListeners/duploservices-az01-httpd-http-80-external",
                "http_listener_name": "duploservices-az01-httpd-http-80-external",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-httpd/requestRoutingRules/duploservices-az01-httpd-http-80-external-http-10200-with-hc",
                "name": "duploservices-az01-httpd-http-80-external-http-10200-with-hc",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "duploservices-az01-ag",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": [],
            "type": "azurerm_application_gateway",
            "duplo_var_name": "duploservices-az01-httpd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "duploservices-az01-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/backendAddressPools/duploservices-az01-nginx-be-pools",
                "ip_addresses": [
                  "10.217.1.4",
                  "10.217.1.5"
                ],
                "name": "duploservices-az01-nginx-be-pools"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/backendHttpSettingsCollection/duploservices-az01-nginx-http-10100-with-hc",
                "name": "duploservices-az01-nginx-http-10100-with-hc",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 10100,
                "probe_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/probes/duploservices-az01-nginx-http-10100",
                "probe_name": "duploservices-az01-nginx-http-10100",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/frontendIPConfigurations/duploservices-az01-nginx-fe-config-external",
                "name": "duploservices-az01-nginx-fe-config-external",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/publicIPAddresses/duploservices-az01-nginx",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/frontendPorts/duploservices-az01-nginx-80",
                "name": "duploservices-az01-nginx-80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/gatewayIPConfigurations/duploservices-duploservices-az01-ag-nginx-gateway",
                "name": "duploservices-duploservices-az01-ag-nginx-gateway",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/duploinfra-default-ag"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/frontendIPConfigurations/duploservices-az01-nginx-fe-config-external",
                "frontend_ip_configuration_name": "duploservices-az01-nginx-fe-config-external",
                "frontend_port_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/frontendPorts/duploservices-az01-nginx-80",
                "frontend_port_name": "duploservices-az01-nginx-80",
                "host_name": "",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/httpListeners/duploservices-az01-nginx-http-80-external",
                "name": "duploservices-az01-nginx-http-80-external",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourcegroups/duploservices-az01/providers/Microsoft.ManagedIdentity/userAssignedIdentities/duploservices-az01"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus",
            "name": "duploservices-az01-nginx",
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/probes/duploservices-az01-nginx-http-10100",
                "interval": 10,
                "match": [
                  {
                    "body": "",
                    "status_code": []
                  }
                ],
                "minimum_servers": 0,
                "name": "duploservices-az01-nginx-http-10100",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "protocol": "Http",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/backendAddressPools/duploservices-az01-nginx-be-pools",
                "backend_address_pool_name": "duploservices-az01-nginx-be-pools",
                "backend_http_settings_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/backendHttpSettingsCollection/duploservices-az01-nginx-http-10100-with-hc",
                "backend_http_settings_name": "duploservices-az01-nginx-http-10100-with-hc",
                "http_listener_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/httpListeners/duploservices-az01-nginx-http-80-external",
                "http_listener_name": "duploservices-az01-nginx-http-80-external",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/applicationGateways/duploservices-az01-nginx/requestRoutingRules/duploservices-az01-nginx-http-80-external-http-10100-with-hc",
                "name": "duploservices-az01-nginx-http-80-external-http-10100-with-hc",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "duploservices-az01-ag",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": [],
            "type": "azurerm_application_gateway",
            "duplo_var_name": "duploservices-az01-nginx"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "duploservices-b0071-app01-app-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/backendAddressPools/duploservices-b0071-app01-app-01-be-pools",
                "ip_addresses": [
                  "10.88.44.68"
                ],
                "name": "duploservices-b0071-app01-app-01-be-pools"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/backendHttpSettingsCollection/duploservices-b0071-app01-app-01-http-80-with-hc",
                "name": "duploservices-b0071-app01-app-01-http-80-with-hc",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/probes/duploservices-b0071-app01-app-01-http-80",
                "probe_name": "duploservices-b0071-app01-app-01-http-80",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/frontendIPConfigurations/duploservices-b0071-app01-app-01-fe-config-external",
                "name": "duploservices-b0071-app01-app-01-fe-config-external",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/publicIPAddresses/duploservices-b0071-app01-app-01",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/frontendPorts/duploservices-b0071-app01-app-01-80",
                "name": "duploservices-b0071-app01-app-01-80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/gatewayIPConfigurations/duploservices-duploservices-b0071-app01-ag-app-01-gateway",
                "name": "duploservices-duploservices-b0071-app01-ag-app-01-gateway",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-a0071-sub04-appgateway"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/frontendIPConfigurations/duploservices-b0071-app01-app-01-fe-config-external",
                "frontend_ip_configuration_name": "duploservices-b0071-app01-app-01-fe-config-external",
                "frontend_port_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/frontendPorts/duploservices-b0071-app01-app-01-80",
                "frontend_port_name": "duploservices-b0071-app01-app-01-80",
                "host_name": "",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/httpListeners/duploservices-b0071-app01-app-01-http-80-external",
                "name": "duploservices-b0071-app01-app-01-http-80-external",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourcegroups/duploservices-b0071-app01/providers/Microsoft.ManagedIdentity/userAssignedIdentities/duploservices-b0071-app01"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus2",
            "name": "duploservices-b0071-app01-app-01",
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/probes/duploservices-b0071-app01-app-01-http-80",
                "interval": 10,
                "match": [
                  {
                    "body": "",
                    "status_code": []
                  }
                ],
                "minimum_servers": 0,
                "name": "duploservices-b0071-app01-app-01-http-80",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "protocol": "Http",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/backendAddressPools/duploservices-b0071-app01-app-01-be-pools",
                "backend_address_pool_name": "duploservices-b0071-app01-app-01-be-pools",
                "backend_http_settings_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/backendHttpSettingsCollection/duploservices-b0071-app01-app-01-http-80-with-hc",
                "backend_http_settings_name": "duploservices-b0071-app01-app-01-http-80-with-hc",
                "http_listener_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/httpListeners/duploservices-b0071-app01-app-01-http-80-external",
                "http_listener_name": "duploservices-b0071-app01-app-01-http-80-external",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/applicationGateways/duploservices-b0071-app01-app-01/requestRoutingRules/duploservices-b0071-app01-app-01-http-80-external-http-80-with-hc",
                "name": "duploservices-b0071-app01-app-01-http-80-external-http-80-with-hc",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "duploservices-b0071-app01-ag",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            },
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": [],
            "type": "azurerm_application_gateway",
            "duplo_var_name": "duploservices-b0071-app01-app-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-a0071-app01-app01-zjyzo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071-app01/providers/Microsoft.Network/networkInterfaces/duploservices-a0071-app01-app01-zjyzo",
            "ip_configuration": [
              {
                "name": "duploservices-a0071-app01-app01-zjyzo",
                "primary": true,
                "private_ip_address": "10.89.44.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/duploinfra-a0071-sub02-private"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9B-A8-BB",
            "name": "duploservices-a0071-app01-app01-zjyzo",
            "private_ip_address": "10.89.44.68",
            "private_ip_addresses": [
              "10.89.44.68"
            ],
            "resource_group_name": "duploservices-a0071-app01",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071-app01/providers/Microsoft.Compute/virtualMachines/duploservices-a0071-app01-app01-zjyzo",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-a0071-app01-app01-zjyzo"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-a0071-app01-app02-oazhi8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071-app01/providers/Microsoft.Network/networkInterfaces/duploservices-a0071-app01-app02-oazhi8",
            "ip_configuration": [
              {
                "name": "duploservices-a0071-app01-app02-oazhi8",
                "primary": true,
                "private_ip_address": "10.89.44.69",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/duploinfra-a0071-sub02-private"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9B-AB-2F",
            "name": "duploservices-a0071-app01-app02-oazhi8",
            "private_ip_address": "10.89.44.69",
            "private_ip_addresses": [
              "10.89.44.69"
            ],
            "resource_group_name": "duploservices-a0071-app01",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071-app01/providers/Microsoft.Compute/virtualMachines/duploservices-a0071-app01-app02-oazhi8",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-a0071-app01-app02-oazhi8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-a0071poc01-1234-trjsa8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071poc01/providers/Microsoft.Network/networkInterfaces/duploservices-a0071poc01-1234-trjsa8",
            "ip_configuration": [
              {
                "name": "duploservices-a0071poc01-1234-trjsa8",
                "primary": true,
                "private_ip_address": "10.90.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071harsh/providers/Microsoft.Network/virtualNetworks/a0071harsh/subnets/default"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-20-83-42",
            "name": "duploservices-a0071poc01-1234-trjsa8",
            "private_ip_address": "10.90.1.6",
            "private_ip_addresses": [
              "10.90.1.6"
            ],
            "resource_group_name": "duploservices-a0071poc01",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071poc01/providers/Microsoft.Compute/virtualMachines/duploservices-a0071poc01-1234-trjsa8",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-a0071poc01-1234-trjsa8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-a0071poc01-a0071app01-5f37j",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071poc01/providers/Microsoft.Network/networkInterfaces/duploservices-a0071poc01-a0071app01-5f37j",
            "ip_configuration": [
              {
                "name": "duploservices-a0071poc01-a0071app01-5f37j",
                "primary": true,
                "private_ip_address": "10.90.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071harsh/providers/Microsoft.Network/virtualNetworks/a0071harsh/subnets/default"
              }
            ],
            "location": "eastus",
            "name": "duploservices-a0071poc01-a0071app01-5f37j",
            "private_ip_address": "10.90.1.4",
            "private_ip_addresses": [
              "10.90.1.4"
            ],
            "resource_group_name": "duploservices-a0071poc01",
            "timeouts": {
            },
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-a0071poc01-a0071app01-5f37j"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-a0071poc01-a0071vmapp02-6m7j7s",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-a0071poc01/providers/Microsoft.Network/networkInterfaces/duploservices-a0071poc01-a0071vmapp02-6m7j7s",
            "ip_configuration": [
              {
                "name": "duploservices-a0071poc01-a0071vmapp02-6m7j7s",
                "primary": true,
                "private_ip_address": "10.90.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071harsh/providers/Microsoft.Network/virtualNetworks/a0071harsh/subnets/default"
              }
            ],
            "location": "eastus",
            "name": "duploservices-a0071poc01-a0071vmapp02-6m7j7s",
            "private_ip_address": "10.90.1.5",
            "private_ip_addresses": [
              "10.90.1.5"
            ],
            "resource_group_name": "duploservices-a0071poc01",
            "timeouts": {
            },
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-a0071poc01-a0071vmapp02-6m7j7s"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-az01-linux1-lfluf",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01/providers/Microsoft.Network/networkInterfaces/duploservices-az01-linux1-lfluf",
            "ip_configuration": [
              {
                "name": "duploservices-az01-linux1-lfluf",
                "primary": true,
                "private_ip_address": "10.217.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/default"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-9E-6D-03",
            "name": "duploservices-az01-linux1-lfluf",
            "private_ip_address": "10.217.1.4",
            "private_ip_addresses": [
              "10.217.1.4"
            ],
            "resource_group_name": "duploservices-az01",
            "tags": {
              "duplo-project": "az01"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01/providers/Microsoft.Compute/virtualMachines/duploservices-az01-linux1-lfluf",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-az01-linux1-lfluf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-az01-linux2-c293i",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01/providers/Microsoft.Network/networkInterfaces/duploservices-az01-linux2-c293i",
            "ip_configuration": [
              {
                "name": "duploservices-az01-linux2-c293i",
                "primary": true,
                "private_ip_address": "10.217.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/default"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8A-B7-30",
            "name": "duploservices-az01-linux2-c293i",
            "private_ip_address": "10.217.1.5",
            "private_ip_addresses": [
              "10.217.1.5"
            ],
            "resource_group_name": "duploservices-az01",
            "tags": {
              "duplo-project": "az01"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01/providers/Microsoft.Compute/virtualMachines/duploservices-az01-linux2-c293i",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-az01-linux2-c293i"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-b0071-app01-web01-l2usc7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01/providers/Microsoft.Network/networkInterfaces/duploservices-b0071-app01-web01-l2usc7",
            "ip_configuration": [
              {
                "name": "duploservices-b0071-app01-web01-l2usc7",
                "primary": true,
                "private_ip_address": "10.88.44.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-b0071-sub02-private"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-05-FF-5C",
            "name": "duploservices-b0071-app01-web01-l2usc7",
            "private_ip_address": "10.88.44.68",
            "private_ip_addresses": [
              "10.88.44.68"
            ],
            "resource_group_name": "duploservices-b0071-app01",
            "tags": {
              "cdc_billing": "DUPLO_POC",
              "duplo-project": "b0071-app01"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01/providers/Microsoft.Compute/virtualMachines/duploservices-b0071-app01-web01-l2usc7",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-b0071-app01-web01-l2usc7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-b0071-app01-web02-2rz6v",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01/providers/Microsoft.Network/networkInterfaces/duploservices-b0071-app01-web02-2rz6v",
            "ip_configuration": [
              {
                "name": "duploservices-b0071-app01-web02-2rz6v",
                "primary": true,
                "private_ip_address": "10.88.44.69",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-b0071-sub02-private"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-00-D2-EF",
            "name": "duploservices-b0071-app01-web02-2rz6v",
            "private_ip_address": "10.88.44.69",
            "private_ip_addresses": [
              "10.88.44.69"
            ],
            "resource_group_name": "duploservices-b0071-app01",
            "tags": {
              "cdc_billing": "DUPLO_POC",
              "duplo-project": "b0071-app01"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01/providers/Microsoft.Compute/virtualMachines/duploservices-b0071-app01-web02-2rz6v",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-b0071-app01-web02-2rz6v"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "duploservices-test01-host1-8fbtdj",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-test01/providers/Microsoft.Network/networkInterfaces/duploservices-test01-host1-8fbtdj",
            "ip_configuration": [
              {
                "name": "duploservices-test01-host1-8fbtdj",
                "primary": true,
                "private_ip_address": "10.218.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/virtualNetworks/azeastus2/subnets/default"
              }
            ],
            "location": "eastus2",
            "mac_address": "00-0D-3A-0F-90-65",
            "name": "duploservices-test01-host1-8fbtdj",
            "private_ip_address": "10.218.1.5",
            "private_ip_addresses": [
              "10.218.1.5"
            ],
            "resource_group_name": "duploservices-test01",
            "tags": {
              "duplo-project": "test01"
            },
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-test01/providers/Microsoft.Compute/virtualMachines/duploservices-test01-host1-8fbtdj",
            "type": "azurerm_network_interface",
            "duplo_var_name": "duploservices-test01-host1-8fbtdj"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "duploservices-az01-httpd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "duploservices-az01-httpd",
            "fqdn": "duploservices-az01-httpd.eastus.cloudapp.azure.com",
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/publicIPAddresses/duploservices-az01-httpd",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.226.5.139",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "duploservices-az01-httpd",
            "resource_group_name": "duploservices-az01-ag",
            "sku": "Standard",
            "timeouts": {
            },
            "type": "azurerm_public_ip",
            "duplo_var_name": "duploservices-az01-httpd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "duploservices-az01-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "duploservices-az01-nginx",
            "fqdn": "duploservices-az01-nginx.eastus.cloudapp.azure.com",
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-az01-ag/providers/Microsoft.Network/publicIPAddresses/duploservices-az01-nginx",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.152.249.202",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "duploservices-az01-nginx",
            "resource_group_name": "duploservices-az01-ag",
            "sku": "Standard",
            "timeouts": {
            },
            "type": "azurerm_public_ip",
            "duplo_var_name": "duploservices-az01-nginx"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "duploservices-b0071-app01-app-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "duploservices-b0071-app01-app-01",
            "fqdn": "duploservices-b0071-app01-app-01.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploservices-b0071-app01-ag/providers/Microsoft.Network/publicIPAddresses/duploservices-b0071-app01-app-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.177.27.111",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "duploservices-b0071-app01-app-01",
            "resource_group_name": "duploservices-b0071-app01-ag",
            "sku": "Standard",
            "timeouts": {
            },
            "type": "azurerm_public_ip",
            "duplo_var_name": "duploservices-b0071-app01-app-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "gateway-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/publicIPAddresses/gateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.188.11.63",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "gateway-pip",
            "resource_group_name": "duploinfra-azuseast",
            "sku": "Basic",
            "timeouts": {
            },
            "type": "azurerm_public_ip",
            "duplo_var_name": "gateway-pip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "a0071",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.89.44.0/25"
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071",
            "location": "eastus",
            "name": "a0071",
            "resource_group_name": "duploinfra-a0071",
            "subnet": [
              {
                "address_prefix": "10.89.44.0/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/duploinfra-azurebastionsubnet",
                "name": "duploinfra-azurebastionsubnet",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-azurebastionsubnet"
              },
              {
                "address_prefix": "10.89.44.16/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/networkSecurityGroups/default"
              },
              {
                "address_prefix": "10.89.44.32/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/duploinfra-a0071-sub01-public",
                "name": "duploinfra-a0071-sub01-public",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-a0071-sub01-public"
              },
              {
                "address_prefix": "10.89.44.48/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/duploinfra-a0071-sub04-appgateway",
                "name": "duploinfra-a0071-sub04-appgateway",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-a0071-sub04-appgateway"
              },
              {
                "address_prefix": "10.89.44.64/26",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/virtualNetworks/a0071/subnets/duploinfra-a0071-sub02-private",
                "name": "duploinfra-a0071-sub02-private",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-a0071-sub02-private"
              }
            ],
            "tags": {
              "cdc_billing": "DUPLO_POC",
              "cdc_billing_identifier": "12345"
            },
            "timeouts": {
            },
            "type": "azurerm_virtual_network",
            "duplo_var_name": "a0071"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "a0071harsh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.90.1.0/24"
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071harsh/providers/Microsoft.Network/virtualNetworks/a0071harsh",
            "location": "eastus",
            "name": "a0071harsh",
            "resource_group_name": "duploinfra-a0071harsh",
            "subnet": [
              {
                "address_prefix": "10.90.1.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071harsh/providers/Microsoft.Network/virtualNetworks/a0071harsh/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-a0071harsh/providers/Microsoft.Network/networkSecurityGroups/default"
              }
            ],
            "timeouts": {
            },
            "type": "azurerm_virtual_network",
            "duplo_var_name": "a0071harsh"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "azeastus2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.218.0.0/16"
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/virtualNetworks/azeastus2",
            "location": "eastus2",
            "name": "azeastus2",
            "resource_group_name": "duploinfra-azeastus2",
            "subnet": [
              {
                "address_prefix": "10.218.1.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/virtualNetworks/azeastus2/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/networkSecurityGroups/default"
              },
              {
                "address_prefix": "10.218.2.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/virtualNetworks/azeastus2/subnets/duploinfra-subnet02",
                "name": "duploinfra-subnet02",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/networkSecurityGroups/duploinfra-subnet02"
              },
              {
                "address_prefix": "10.218.4.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/virtualNetworks/azeastus2/subnets/duploinfra-sub04",
                "name": "duploinfra-sub04",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/networkSecurityGroups/duploinfra-sub04"
              },
              {
                "address_prefix": "10.218.5.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/virtualNetworks/azeastus2/subnets/duploinfra-vnetblock",
                "name": "duploinfra-vnetblock",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azeastus2/providers/Microsoft.Network/networkSecurityGroups/duploinfra-vnetblock"
              }
            ],
            "timeouts": {
            },
            "type": "azurerm_virtual_network",
            "duplo_var_name": "azeastus2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "azuseast",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.217.0.0/16"
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast",
            "location": "eastus",
            "name": "azuseast",
            "resource_group_name": "duploinfra-azuseast",
            "subnet": [
              {
                "address_prefix": "10.217.0.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/gatewaysubnet",
                "name": "gatewaysubnet"
              },
              {
                "address_prefix": "10.217.1.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/networkSecurityGroups/default"
              },
              {
                "address_prefix": "10.217.2.0/24",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/duploinfra-default-ag",
                "name": "duploinfra-default-ag",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/networkSecurityGroups/duploinfra-default-ag"
              }
            ],
            "timeouts": {
            },
            "type": "azurerm_virtual_network",
            "duplo_var_name": "azuseast"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "b0071",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.88.44.0/25"
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071",
            "location": "eastus2",
            "name": "b0071",
            "resource_group_name": "duploinfra-b0071",
            "subnet": [
              {
                "address_prefix": "10.88.44.0/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-azurebastionsubnet",
                "name": "duploinfra-azurebastionsubnet",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-azurebastionsubnet"
              },
              {
                "address_prefix": "10.88.44.16/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/networkSecurityGroups/default"
              },
              {
                "address_prefix": "10.88.44.32/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-b0071-sub01-public",
                "name": "duploinfra-b0071-sub01-public",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-b0071-sub01-public"
              },
              {
                "address_prefix": "10.88.44.48/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-a0071-sub04-appgateway",
                "name": "duploinfra-a0071-sub04-appgateway",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-a0071-sub04-appgateway"
              },
              {
                "address_prefix": "10.88.44.64/26",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/virtualNetworks/b0071/subnets/duploinfra-b0071-sub02-private",
                "name": "duploinfra-b0071-sub02-private",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-b0071/providers/Microsoft.Network/networkSecurityGroups/duploinfra-b0071-sub02-private"
              }
            ],
            "tags": {
              "cdc_billing": "DUPLO-POC",
              "cdc_billing_identifier": "DUPLO-POC-ID",
              "cdc_environment": "TEST"
            },
            "timeouts": {
            },
            "type": "azurerm_virtual_network",
            "duplo_var_name": "b0071"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "k0071",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.76.44.0/25"
            ],
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-k0071/providers/Microsoft.Network/virtualNetworks/k0071",
            "location": "eastus2",
            "name": "k0071",
            "resource_group_name": "duploinfra-k0071",
            "subnet": [
              {
                "address_prefix": "10.76.44.16/28",
                "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-k0071/providers/Microsoft.Network/virtualNetworks/k0071/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-k0071/providers/Microsoft.Network/networkSecurityGroups/default"
              }
            ],
            "timeouts": {
            },
            "type": "azurerm_virtual_network",
            "duplo_var_name": "k0071"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "gatewaytoduplo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_address": "10.217.0.254"
              }
            ],
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworkGateways/gatewaytoduplo",
            "ip_configuration": [
              {
                "name": "gwipconfig1",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/publicIPAddresses/gateway-pip",
                "subnet_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworks/azuseast/subnets/gatewaysubnet"
              }
            ],
            "location": "eastus",
            "name": "gatewaytoduplo",
            "resource_group_name": "duploinfra-azuseast",
            "sku": "VpnGw1",
            "timeouts": {
            },
            "type": "azurerm_virtual_network_gateway",
            "vpn_type": "RouteBased",
            "duplo_var_name": "gatewaytoduplo"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "azure-to-duplo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_protocol": "IKEv2",
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/connections/azure-to-duplo",
            "local_network_gateway_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/localNetworkGateways/Site1",
            "location": "eastus",
            "name": "azure-to-duplo",
            "resource_group_name": "duploinfra-azuseast",
            "routing_weight": 10,
            "shared_key": "EwZMgDkHmhYRzvxVMsPUytPi8HIih_zF",
            "timeouts": {
            },
            "type": "azurerm_virtual_network_gateway_connection",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/1bba704a-8668-4174-8bb4-07d06dbefdb2/resourceGroups/duploinfra-azuseast/providers/Microsoft.Network/virtualNetworkGateways/gatewaytoduplo",
            "duplo_var_name": "azure-to-duplo"
          }
        }
      ]
    }
  ]
}